--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -25,13 +25,27 @@ jobs:
         uses: actions/setup-python@v5
       - name: Install uv
         uses: astral-sh/setup-uv@v4
-      - name: Build docs
+      - name: Build HTML docs
         run: make html
         working-directory: ./docs
-      - name: Upload artifact
+      - name: Build PDF docs
+        run: make pdf
+        working-directory: ./docs
+      - uses: xu-cheng/texlive-action@v2
+        with:
+          scheme: full
+          run: |
+            apk add make
+            make -C ./docs/build/pdf
+      - name: Upload GH pages artifacts
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./docs/build/html
+      - name: Upload PDF artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: docs-pdf
+          path: ./docs/build/pdf/minimalrisc-vsoc.pdf
   # Deployment job
   deploy:
     environment:
