--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ["master"]
     paths:
-      - 'docs/**'
+      - "docs/**"
   workflow_dispatch:
 
 permissions:
@@ -30,25 +30,25 @@ jobs:
       - name: Build HTML docs
         run: make html
         working-directory: ./docs
-      - name: Build PDF docs
-        run: make pdf
-        working-directory: ./docs
-      - uses: xu-cheng/texlive-action@v2
-        with:
-          scheme: full
-          run: |
-            apk add make
-            make -C ./docs/build/pdf
+      # - name: Build PDF docs
+      #   run: make pdf
+      #   working-directory: ./docs
+      # - uses: xu-cheng/texlive-action@v2
+      #   with:
+      #     scheme: full
+      #     run: |
+      #       apk add make
+      #       make -C ./docs/build/pdf
       - name: Upload GH pages artifacts
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./docs/build/html
-      - name: Upload PDF artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: docs-pdf
-          path: ./docs/build/pdf/minimalrisc-vsoc.pdf
-          compression-level: 0
+      # - name: Upload PDF artifact
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: docs-pdf
+      #     path: ./docs/build/pdf/minimalrisc-vsoc.pdf
+      #     compression-level: 0
   # Deployment job
   deploy:
     environment:
@@ -60,5 +60,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
-
