--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -5,9 +5,10 @@ description = "A minimal RISC-V SoC containing an RV32I-compliant core, a UART a
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "furo>=2024.8.6",
-    "myst-parser>=4.0.0",
-    "sphinx-last-updated-by-git>=0.3.8",
-    "sphinx>=8.1.3",
-    "sphinx-autobuild>=2024.10.3",
+  "furo>=2024.8.6",
+  "myst-parser>=4.0.0",
+  "sphinx-last-updated-by-git>=0.3.8",
+  "sphinx>=8.1.3",
+  "sphinx-autobuild>=2024.10.3",
+  "codespell>=2.3.0",
 ]
