Use different wavedrom lib, use fork for custom Python version

--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -12,5 +12,5 @@ dependencies = [
   "sphinx-autobuild>=2024.10.3",
   "codespell>=2.3.0",
   "sphinx-copybutton>=0.5.2",
-  "sphinxcontrib-wavedrom>=3.0.4",
+  "sphinxcontrib-yowasp-wavedrom@git+https://github.com/matiasilva/sphinxcontrib-wavedrom.git@main",
 ]
