--- a/.github/workflows/chipsim.yaml
+++ b/.github/workflows/chipsim.yaml
@@ -36,12 +36,18 @@ jobs:
       - name: Setup just
         uses: taiki-e/install-action@just
 
+      - name: temp1
+        run: "pwd"
+
       - name: Setup OSS CAD Suite
         if: steps.oss-cad-cache.outputs.cache-hit != 'true'
         uses: YosysHQ/setup-oss-cad-suite@v3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ env.OSS_CAD_SUITE_VERSION }}
+
+      - name: temp2
+        run: "pwd"
 
       - name: Run block tests
         run: |
