Roll ubuntu back

--- a/.github/workflows/chipsim.yaml
+++ b/.github/workflows/chipsim.yaml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout code
@@ -43,10 +43,6 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ env.OSS_CAD_SUITE_VERSION }}
-
-      - name: Fix OSS CAD Suite
-        run: |
-          rm -rf ${{ runner.temp }}/oss-cad-suite/bin/python*
 
       - name: Run block tests
         run: |
