--- a/.github/workflows/chipsim.yaml
+++ b/.github/workflows/chipsim.yaml
@@ -7,7 +7,6 @@ on:
 
 env:
   OSS_CAD_SUITE_VERSION: "2025-08-31"
-  OSS_CAD_SUITE_PATH: ${{ runner.temp }}/oss-cad-suite
 
 jobs:
   build:
@@ -26,7 +25,7 @@ jobs:
         uses: actions/cache@v4
         id: oss-cad-cache
         with:
-          path: ${{ env.OSS_CAD_SUITE_PATH }}
+          path: ${{ runner.temp }}/oss-cad-suite
           key: oss-cad-suite-${{ runner.os }}-${{ env.OSS_CAD_SUITE_VERSION }}
 
       - name: Cache just
@@ -49,7 +48,7 @@ jobs:
       - name: Add OSS CAD Suite to path
         if: steps.oss-cad-cache.outputs.cache-hit != 'true'
         run: |
-          echo ${{ env.OSS_CAD_SUITE_PATH }} >> "$GITHUB_PATH"
+          echo "${{ runner.temp }}/oss-cad-suite/bin" >> "$GITHUB_PATH"
 
       - name: Run block tests
         run: |
