--- a/.github/workflows/chipsim.yaml
+++ b/.github/workflows/chipsim.yaml
@@ -7,18 +7,20 @@ on:
 
 env:
   OSS_CAD_SUITE_VERSION: "2025-08-31"
-  JUST_VERSION: 1.
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
+  test:
+    runs-on: ubuntu-22.04
+    env:
+      WAVES: 0
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
 
       - name: Install uv
         uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
 
       - name: Cache OSS CAD Suite
         uses: actions/cache@v4
@@ -28,12 +30,14 @@ jobs:
           key: oss-cad-suite-${{ runner.os }}-${{ env.OSS_CAD_SUITE_VERSION }}
 
       - name: Cache just
+        id: just-cache
         uses: actions/cache@v4
         with:
           path: ~/.cargo/bin/just
           key: just-${{ runner.os }}
 
       - name: Setup just
+        if: steps.just-cache.outputs.cache-hit != 'true'
         uses: taiki-e/install-action@just
 
       - name: Setup OSS CAD Suite
@@ -42,6 +46,11 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ env.OSS_CAD_SUITE_VERSION }}
+
+      - name: Add OSS CAD Suite to path
+        if: steps.oss-cad-cache.outputs.cache-hit == 'true'
+        run: |
+          echo "${{ runner.temp }}/oss-cad-suite/bin" >> "$GITHUB_PATH"
 
       - name: Run block tests
         run: |
