Add experimental hazard unit and forwarding unit

--- a/cores/cpu/justfile
+++ b/cores/cpu/justfile
@@ -1,7 +1,7 @@
 HDL_DIR := "hdl/"
 SRCS := "cpu_core.sv \
 				insnmem.sv aluctrl.sv control.sv regfile.sv \
-				alu.sv memory.sv \
+				alu.sv memory.sv hazard_unit.sv forwarding_unit.sv \
 				pipeline/q1q2.sv pipeline/q2q3.sv pipeline/q3q4.sv pipeline/q4q5.sv"
 # INCLUDES := "cpu_types.vh"
 FULL_SRCS := prepend(HDL_DIR, SRCS)
