--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 description = "Minimal RISC-V SoC"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = ["cocotb", "pytest~=8.4.1"]
+dependencies = [
+    "cocotb",
+    "pre-commit>=4.3.0",
+    "pytest~=8.4.1",
+]
 
 [tool.uv.sources]
 cocotb = { git = "https://github.com/cocotb/cocotb", tag = "v2.0.0b1" }
