Add block diagram

--- a/cores/cpu/justfile
+++ b/cores/cpu/justfile
@@ -25,3 +25,6 @@ fixtures:
   $TOOLS_ROOT/gen_hex_data.py 128 -o $CPU_ROOT/tests/test_insnmem_preload_512.hex
   $TOOLS_ROOT/gen_hex_data.py 256 -o $CPU_ROOT/tests/test_insnmem_preload_1024.hex
   $TOOLS_ROOT/gen_hex_data.py 512 -o $CPU_ROOT/tests/test_insnmem_preload_2048.hex
+
+draw:
+  d2 -t 1 --layout=elk -w $CPU_ROOT/cpu.d2 out.svg
